Time-of-Use/Predictions: improvements (#1028)
- make `TimeOfUsePrices` and `Prediction` more transparent/obvious to use, by using a map of ZonedDateTime to value/price
  - this also allows to handle more than 24h of data if available, e.g. after 2pm when there is data available till next day evening.
   - This is useful, e.g. for ESS-TimeOfUse-Controller, to find better Schedules.
- use Double instead of Float for prices, because it is better usable in Java.
- set Thread priority for Optimizer to low (`MIN_PRIORITY`), to not disturb real-time control
- drop unused JSONRPC-Request
- Persistence-Model-Predictor predicts 48 hours (= always more then prices available)
- Handle non-available Production prediction (for systems without PV)

Reviewed-on: https://git.intranet.fenecon.de/FENECON/fems/pulls/1028
Reviewed-by: Michael Grill <michael.grill@fenecon.de>